src/objects/Interim_Payment_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>DateofEval__c</fullName>
        <description>Date of Evaluation</description>
        <label>Date of Eval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EnrollmentApplication__c</fullName>
        <label>Enrollment Application</label>
        <referenceTo>EnrollmentPlan__c</referenceTo>
        <relationshipLabel>Interim Payment Schedules</relationshipLabel>
        <relationshipName>Interim_Payment_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IPAmount__c</fullName>
        <formula>EnrollmentApplication__r.FinalIncentivePoolAdjusted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <inlineHelpText>Estimated Project Cost % Complete Upon Payment</inlineHelpText>
        <label>Milestone %</label>
        <picklist>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentAwarded__c</fullName>
        <label>Payment Awarded</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentDate__c</fullName>
        <inlineHelpText>Estimated Date of Achievement</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <description>&quot;Are you requesting interim payments on an Annual basis or Milestone basis?&quot;</description>
        <inlineHelpText>Eligibility for annual payments occurs following close of fiscal year.  If milestone payments requested, describe timing and criteria in comment.</inlineHelpText>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Interim Payment Schedule</label>
    <nameField>
        <displayFormat>IP-{0000}</displayFormat>
        <label>IP-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interim Payment Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>